land: rootdir: change sysfs owner for display_pwr
Change sysfs owner to system for /sys/kernel/hbtp/display_pwr.
Sysfs is used by power team to notify when display is on/off.

Change-Id: I6adacc30d39e65ad4250f32484ddf87206b85c12

--- a/rootdir/etc/init.qcom.power.rc
+++ b/rootdir/etc/init.qcom.power.rc
@@ -12,6 +12,7 @@ on init
     chmod 0664 /dev/cpuset/camera-daemon/tasks
 
 on boot
+    chown system system /sys/kernel/hbtp/display_pwr
 
     # Set RPS mask
     write /sys/class/net/rmnet0/queues/rx-0/rps_cpus 2
