--- a/rootdir/etc/ueventd.qcom.rc
+++ b/rootdir/etc/ueventd.qcom.rc
@@ -185,6 +185,7 @@
 /dev/i2c-5                0660   media       media
 /dev/voice_svc            0660   system     audio
 /dev/avtimer              0660   system     audio
+/dev/aud_pasthru_adsp     0660   system     audio
 
 # DVB devices
 /dev/dvb/adapter0/demux*  0440   media       media
