--- a/rootdir/etc/ueventd.qcom.rc
+++ b/rootdir/etc/ueventd.qcom.rc
@@ -279,6 +279,14 @@
 /sys/devices/soc/soc:fpc1020            wakeup_enable	                0220   system     system
 /sys/devices/soc/soc:fpc1020            compatible_all	                0220   system     system
 
+# sys-fs display
+/sys/class/kgsl/kgsl-3d0    pwrscale                 0664    root  system
+/sys/class/kgsl/kgsl-3d0    devfreq/governor         0664    root  system
+/sys/class/kgsl/kgsl-3d0    force_rail_on            0664    root  system
+/sys/class/kgsl/kgsl-3d0    force_bus_on             0664    root  system
+/sys/class/kgsl/kgsl-3d0    force_clk_on             0664    root  system
+/sys/class/kgsl/kgsl-3d0    bus_split                0664    root  system
+
 # /dev/sensors only supports an ioctl to get the current SLPI timestamp
 # allow the sensors daemon to perform this as non-root
 /dev/sensors                            0660   root       system
