--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -30,6 +30,8 @@
 on fs
     wait /dev/block/platform/soc/${ro.boot.bootdevice}
     symlink /dev/block/platform/soc/${ro.boot.bootdevice} /dev/block/bootdevice
+    # GnssConfiguration doesn't actually look at gps.conf, just the debug file
+    mount none /system/etc/gps.conf /system/etc/gps_debug.conf bind
 
     mount_all /vendor/etc/fstab.qcom
     write /proc/sys/vm/page-cluster 0
