--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -349,6 +349,7 @@ service vendor.msm_irqbal_lb /vendor/bin/msm_irqbalance -f /vendor/etc/msm_irqba
     disabled
 
 on charger
+    setprop persist.sys.usb.config mass_storage
     load_system_props
     start vendor.qcom-post-boot
 
