--- a/configs/thermal/thermal-engine.conf
+++ b/configs/thermal/thermal-engine.conf
@@ -1,29 +1,7 @@
 # SENSOR : ALIAS
-# tsens_tz_sensor2 : pop_mem
-# tsens_tz_sensor10 : gpu
-# tsens_tz_sensor9 : cpu4-cpu5-cpu6-cpu7
-# tsens_tz_sensor8 : cpu3
-# tsens_tz_sensor7 : cpu2
-# tsens_tz_sensor6 : cpu1
-# tsens_tz_sensor5 : cpu0
-# tsens_tz_sensor4 : L2_cache_1
 
-# CPU voltage table:
-# cluster0[0] voltage = 1250 mV freq = 1209600 kHz
-# cluster0[1] voltage = 1225 mV freq = 1094400 kHz
-# cluster0[2] voltage = 1200 mV freq = 998400 kHz
-# cluster0[3] voltage = 1150 mV freq = 902400 kHz
-# cluster0[4] voltage = 1130 mV freq = 768000 kHz
-# cluster0[5] voltage = 1040 mV freq = 345600 kHz
-# cluster1[0] voltage = 1250 mV freq = 1497600 kHz
-# cluster1[1] voltage = 1225 mV freq = 1344000 kHz
-# cluster1[2] voltage = 1200 mV freq = 1209600 kHz
-# cluster1[3] voltage = 1150 mV freq = 1094400 kHz
-# cluster1[4] voltage = 1130 mV freq = 960000 kHz
-# cluster1[5] voltage = 1040 mV freq = 422400 kHz
-
-debug
-#Conf file: system/vendor/etc/thermal-engine.conf
+#debug
+#Conf file: /vendor/etc/thermal-engine.conf
 
 [VIRTUAL-CPUS]
 #algo_type virtual
@@ -35,33 +13,6 @@ weights
 sampling 50
 math 2
 
-[SS-GPU]
-#algo_type ss
-sampling 250
-sensor gpu
-device gpu
-set_point 95000
-set_point_clr 65000
-time_constant 0
-
-[SS-POPMEM]
-#algo_type ss
-sampling 250
-sensor pop_mem
-device cpu_voltage
-set_point 70000
-set_point_clr 55000
-time_constant 2
-
-[SS-CPUS]
-#algo_type ss
-sampling 50
-sensor VIRTUAL-CPUS
-device cpu_voltage
-set_point 85000
-set_point_clr 55000
-time_constant 0
-
 [SPEAKER-CAL]
 sampling 30000 30000 10 1800000
 sensor pm8937_tz
@@ -70,112 +21,339 @@ temp_range 6000 10000 2000
 max_temp 45000
 offset -4000
 
-[VDD_RSTR_MONITOR-TSENS10]
-#algo_type monitor
-sampling 1000
-sensor tsens_tz_sensor10
-thresholds 5000
-thresholds_clr 10000
-actions vdd_restriction
-action_info 1
-descending
+[BATTERY_CHARGING_CTL]
+algo_type monitor
+sampling 10000
+sensor case_therm
+thresholds 44000 46000 48000 
+thresholds_clr 42000 44000 46000 
+actions battery battery battery 
+action_info 1 2 3 
 
-[VDD_RSTR_MONITOR-TSENS9]
-#algo_type monitor
-sampling 1000
-sensor tsens_tz_sensor9
-thresholds 5000
-thresholds_clr 10000
-actions vdd_restriction
-action_info 1
-descending
+[LCD_SKIN_MANAGEMENT]
+algo_type       monitor
+sampling        5000
+sensor          case_therm
+thresholds       56000 66000 
+thresholds_clr   52000 56000 
+actions          lcd lcd 
+action_info      110  90
 
-[VDD_RSTR_MONITOR-TSENS8]
-#algo_type monitor
-sampling 1000
-sensor tsens_tz_sensor8
-thresholds 5000
-thresholds_clr 10000
-actions vdd_restriction
-action_info 1
-descending
+Thermal Zones
 
-[VDD_RSTR_MONITOR-TSENS7]
-#algo_type monitor
-sampling 1000
-sensor tsens_tz_sensor7
-thresholds 5000
-thresholds_clr 10000
-actions vdd_restriction
-action_info 1
-descending
-
-[VDD_RSTR_MONITOR-TSENS6]
-#algo_type monitor
-sampling 1000
-sensor tsens_tz_sensor6
-thresholds 5000
-thresholds_clr 10000
-actions vdd_restriction
-action_info 1
-descending
-
-[VDD_RSTR_MONITOR-TSENS5]
-#algo_type monitor
-sampling 1000
-sensor tsens_tz_sensor5
-thresholds 5000
-thresholds_clr 10000
-actions vdd_restriction
-action_info 1
-descending
-
-[VDD_RSTR_MONITOR-TSENS4]
-#algo_type monitor
-sampling 1000
-sensor tsens_tz_sensor4
-thresholds 5000
-thresholds_clr 10000
-actions vdd_restriction
-action_info 1
-descending
-
-[VDD_RSTR_MONITOR-TSENS3]
-#algo_type monitor
-sampling 1000
-sensor tsens_tz_sensor3
-thresholds 5000
-thresholds_clr 10000
-actions vdd_restriction
-action_info 1
-descending
-
-[VDD_RSTR_MONITOR-TSENS2]
-#algo_type monitor
-sampling 1000
-sensor tsens_tz_sensor2
-thresholds 5000
-thresholds_clr 10000
-actions vdd_restriction
-action_info 1
-descending
-
-[VDD_RSTR_MONITOR-TSENS1]
-#algo_type monitor
-sampling 1000
-sensor tsens_tz_sensor1
-thresholds 5000
-thresholds_clr 10000
-actions vdd_restriction
-action_info 1
-descending
-
-[VDD_RSTR_MONITOR-TSENS0]
-#algo_type monitor
-sampling 1000
-sensor tsens_tz_sensor0
-thresholds 5000
-thresholds_clr 10000
-actions vdd_restriction
-action_info 1
-descending
+[THERMAL_ZONE_0]
+algo_type      user_space
+sensor         pa-therm1-adc
+polling_delay  0
+passive_delay  0
+set_temp       65000   
+clr_temp       64000   
+[THERMAL_ZONE_1]
+algo_type      user_space
+sensor         xo-therm-adc
+polling_delay  0
+passive_delay  0
+set_temp       65000   
+clr_temp       64000   
+[THERMAL_ZONE_2]
+algo_type      user_space
+sensor         xo-therm-buf-adc
+polling_delay  0
+passive_delay  0
+set_temp       65000   
+clr_temp       64000   
+[THERMAL_ZONE_3]
+algo_type      user_space
+sensor         case-therm-adc
+polling_delay  0
+passive_delay  0
+set_temp       65000   
+clr_temp       64000   
+[THERMAL_ZONE_4]
+algo_type      user_space
+sensor         pa-therm0-adc
+polling_delay  0
+passive_delay  0
+set_temp       65000   
+clr_temp       64000   
+[THERMAL_ZONE_5]
+algo_type      step_wise
+sensor         pm8937_tz
+polling_delay  0
+passive_delay  0
+set_temp       105000  125000  145000  
+clr_temp       105000  125000  145000  
+[THERMAL_ZONE_6]
+algo_type      user_space
+sensor         aoss0-usr
+polling_delay  0
+passive_delay  0
+set_temp       125000  
+clr_temp       124000  
+[THERMAL_ZONE_7]
+algo_type      user_space
+sensor         mdm-core-usr
+polling_delay  0
+passive_delay  0
+set_temp       125000  
+clr_temp       124000  
+[THERMAL_ZONE_8]
+algo_type      user_space
+sensor         lpass-usr
+polling_delay  0
+passive_delay  0
+set_temp       125000  
+clr_temp       124000  
+[THERMAL_ZONE_9]
+algo_type      user_space
+sensor         camera-usr
+polling_delay  0
+passive_delay  0
+set_temp       125000  
+clr_temp       124000  
+[THERMAL_ZONE_10]
+algo_type      user_space
+sensor         cpuss1-usr
+polling_delay  0
+passive_delay  0
+set_temp       125000  
+clr_temp       124000  
+[THERMAL_ZONE_11]
+algo_type      user_space
+sensor         apc1-cpu0-usr
+polling_delay  0
+passive_delay  0
+set_temp       125000  
+clr_temp       124000  
+[THERMAL_ZONE_12]
+algo_type      user_space
+sensor         apc1-cpu1-usr
+polling_delay  0
+passive_delay  0
+set_temp       125000  
+clr_temp       124000  
+[THERMAL_ZONE_13]
+algo_type      user_space
+sensor         apc1-cpu2-usr
+polling_delay  0
+passive_delay  0
+set_temp       125000  
+clr_temp       124000  
+[THERMAL_ZONE_14]
+algo_type      user_space
+sensor         apc1-cpu3-usr
+polling_delay  0
+passive_delay  0
+set_temp       125000  
+clr_temp       124000  
+[THERMAL_ZONE_15]
+algo_type      user_space
+sensor         cpuss0-usr
+polling_delay  0
+passive_delay  0
+set_temp       125000  
+clr_temp       124000  
+[THERMAL_ZONE_16]
+algo_type      user_space
+sensor         gpu-usr
+polling_delay  0
+passive_delay  0
+set_temp       125000  
+clr_temp       124000  
+[THERMAL_ZONE_17]
+algo_type      step_wise
+sensor         gpu-step
+polling_delay  0
+passive_delay  250
+set_temp       95000   
+clr_temp       95000   
+device         gpu 
+upper_limit    05  
+lower_limit    00  
+[THERMAL_ZONE_18]
+algo_type      step_wise
+sensor         hexa-cpu-max-step
+polling_delay  100
+passive_delay  50
+set_temp       85000                                   
+clr_temp       85000                                   
+device         cpu0+cpu1+cpu2+cpu3+cpu4+cpu5+cpu6+cpu7 
+upper_limit    04+04+04+04+03+03+03+03                 
+lower_limit    00+00+00+00+00+00+00+00                 
+[THERMAL_ZONE_19]
+algo_type      step_wise
+sensor         apc1-cpu0-step
+polling_delay  0
+passive_delay  0
+set_temp       105000  
+clr_temp       90000   
+device         cpu0 
+upper_limit    05   
+lower_limit    05   
+[THERMAL_ZONE_20]
+algo_type      step_wise
+sensor         apc1-cpu1-step
+polling_delay  0
+passive_delay  0
+set_temp       105000  
+clr_temp       90000   
+device         cpu1 
+upper_limit    05   
+lower_limit    05   
+[THERMAL_ZONE_21]
+algo_type      step_wise
+sensor         apc1-cpu2-step
+polling_delay  0
+passive_delay  0
+set_temp       105000  
+clr_temp       90000   
+device         cpu2 
+upper_limit    05   
+lower_limit    05   
+[THERMAL_ZONE_22]
+algo_type      step_wise
+sensor         apc1-cpu3-step
+polling_delay  0
+passive_delay  0
+set_temp       105000  
+clr_temp       90000   
+device         cpu3 
+upper_limit    05   
+lower_limit    05   
+[THERMAL_ZONE_23]
+algo_type      step_wise
+sensor         cpuss0-step
+polling_delay  0
+passive_delay  0
+set_temp       105000              
+clr_temp       90000               
+device         cpu4+cpu5+cpu6+cpu7 
+upper_limit    04+04+04+04         
+lower_limit    04+04+04+04         
+[THERMAL_ZONE_24]
+algo_type      low_limits_floor
+sensor         aoss0-lowf
+polling_delay  0
+passive_delay  0
+set_temp       5000                             
+clr_temp       10000                            
+device         cpu0+regulator-cx-cdev+modem_vdd 
+upper_limit    03+00+00                         
+lower_limit    03+00+00                         
+[THERMAL_ZONE_25]
+algo_type      low_limits_floor
+sensor         mdm-core-lowf
+polling_delay  0
+passive_delay  0
+set_temp       5000                             
+clr_temp       10000                            
+device         cpu0+regulator-cx-cdev+modem_vdd 
+upper_limit    03+00+00                         
+lower_limit    03+00+00                         
+[THERMAL_ZONE_26]
+algo_type      low_limits_floor
+sensor         lpass-lowf
+polling_delay  0
+passive_delay  0
+set_temp       5000                             
+clr_temp       10000                            
+device         cpu0+regulator-cx-cdev+modem_vdd 
+upper_limit    03+00+00                         
+lower_limit    03+00+00                         
+[THERMAL_ZONE_27]
+algo_type      low_limits_floor
+sensor         camera-lowf
+polling_delay  0
+passive_delay  0
+set_temp       5000                             
+clr_temp       10000                            
+device         cpu0+regulator-cx-cdev+modem_vdd 
+upper_limit    03+00+00                         
+lower_limit    03+00+00                         
+[THERMAL_ZONE_28]
+algo_type      low_limits_floor
+sensor         cpuss1-lowf
+polling_delay  0
+passive_delay  0
+set_temp       5000                             
+clr_temp       10000                            
+device         cpu0+regulator-cx-cdev+modem_vdd 
+upper_limit    03+00+00                         
+lower_limit    03+00+00                         
+[THERMAL_ZONE_29]
+algo_type      low_limits_floor
+sensor         apc1-cpu0-lowf
+polling_delay  0
+passive_delay  0
+set_temp       5000                             
+clr_temp       10000                            
+device         cpu0+regulator-cx-cdev+modem_vdd 
+upper_limit    03+00+00                         
+lower_limit    03+00+00                         
+[THERMAL_ZONE_30]
+algo_type      low_limits_floor
+sensor         apc1-cpu1-lowf
+polling_delay  0
+passive_delay  0
+set_temp       5000                             
+clr_temp       10000                            
+device         cpu0+regulator-cx-cdev+modem_vdd 
+upper_limit    03+00+00                         
+lower_limit    03+00+00                         
+[THERMAL_ZONE_31]
+algo_type      low_limits_floor
+sensor         apc1-cpu2-lowf
+polling_delay  0
+passive_delay  0
+set_temp       5000                             
+clr_temp       10000                            
+device         cpu0+regulator-cx-cdev+modem_vdd 
+upper_limit    03+00+00                         
+lower_limit    03+00+00                         
+[THERMAL_ZONE_32]
+algo_type      low_limits_floor
+sensor         apc1-cpu3-lowf
+polling_delay  0
+passive_delay  0
+set_temp       5000                             
+clr_temp       10000                            
+device         cpu0+regulator-cx-cdev+modem_vdd 
+upper_limit    03+00+00                         
+lower_limit    03+00+00                         
+[THERMAL_ZONE_33]
+algo_type      low_limits_floor
+sensor         cpuss0-lowf
+polling_delay  0
+passive_delay  0
+set_temp       5000                             
+clr_temp       10000                            
+device         cpu0+regulator-cx-cdev+modem_vdd 
+upper_limit    03+00+00                         
+lower_limit    03+00+00                         
+[THERMAL_ZONE_34]
+algo_type      low_limits_floor
+sensor         gpu-lowf
+polling_delay  0
+passive_delay  0
+set_temp       5000                             
+clr_temp       10000                            
+device         cpu0+regulator-cx-cdev+modem_vdd 
+upper_limit    03+00+00                         
+lower_limit    03+00+00                         
+[THERMAL_ZONE_35]
+algo_type      user_space
+sensor         chg-temp-adc
+polling_delay  0
+passive_delay  0
+set_temp       65000   
+clr_temp       64000   
+[THERMAL_ZONE_36]
+algo_type      step_wise
+sensor         bms
+polling_delay  0
+passive_delay  0
+[THERMAL_ZONE_37]
+algo_type      step_wise
+sensor         battery
+polling_delay  0
+passive_delay  0
