--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -228,6 +228,9 @@ on post-fs-data
     # Create IOP  deamon related dirs
     mkdir /data/vendor/iop 0770 root system
 
+    # Secure Element directory for loader service functionality
+    mkdir /data/vendor/secure_element 0770 secure_element secure_element
+
     # Mark the copy complete flag to not completed
     write /data/vendor/radio/copy_complete 0
     chown radio radio /data/vendor/radio/copy_complete
