land: Update thermal-engine
Signed-off-by: sweetyicecare <gabrielseedev@outlook.com>

--- a/configs/thermal-engine.conf
+++ b/configs/thermal-engine.conf
@@ -1,25 +1,36 @@
 # SENSOR : ALIAS
-# tsens_tz_sensor5 : cpu5
-# tsens_tz_sensor4 : cpu4
 # tsens_tz_sensor2 : pop_mem
-# tsens_tz_sensor15 : gpu
-# tsens_tz_sensor13 : L2_cache_0
-# tsens_tz_sensor12 : cpu3
-# tsens_tz_sensor11 : cpu2
-# tsens_tz_sensor10 : cpu1
-# tsens_tz_sensor9 : cpu0
-# tsens_tz_sensor8 : L2_cache_1
-# tsens_tz_sensor7 : cpu7
-# tsens_tz_sensor6 : cpu6
+# tsens_tz_sensor10 : gpu
+# tsens_tz_sensor9 : cpu4-cpu5-cpu6-cpu7
+# tsens_tz_sensor8 : cpu3
+# tsens_tz_sensor7 : cpu2
+# tsens_tz_sensor6 : cpu1
+# tsens_tz_sensor5 : cpu0
+# tsens_tz_sensor4 : L2_cache_1
 
+# CPU voltage table:
+# cluster0[0] voltage = 1250 mV freq = 1209600 kHz
+# cluster0[1] voltage = 1225 mV freq = 1094400 kHz
+# cluster0[2] voltage = 1200 mV freq = 998400 kHz
+# cluster0[3] voltage = 1150 mV freq = 902400 kHz
+# cluster0[4] voltage = 1130 mV freq = 768000 kHz
+# cluster0[5] voltage = 1040 mV freq = 345600 kHz
+# cluster1[0] voltage = 1250 mV freq = 1497600 kHz
+# cluster1[1] voltage = 1225 mV freq = 1344000 kHz
+# cluster1[2] voltage = 1200 mV freq = 1209600 kHz
+# cluster1[3] voltage = 1150 mV freq = 1094400 kHz
+# cluster1[4] voltage = 1130 mV freq = 960000 kHz
+# cluster1[5] voltage = 1040 mV freq = 422400 kHz
+
+#debug
 #Conf file: system/vendor/etc/thermal-engine.conf
 
 [VIRTUAL-CPUS]
 #algo_type virtual
-trip_sensor tsens_tz_sensor9
+trip_sensor tsens_tz_sensor5
 set_point 75000
 set_point_clr 65000
-sensors tsens_tz_sensor9 tsens_tz_sensor10 tsens_tz_sensor11 tsens_tz_sensor12 tsens_tz_sensor13 tsens_tz_sensor4 tsens_tz_sensor5 tsens_tz_sensor6 tsens_tz_sensor7 tsens_tz_sensor8
+sensors tsens_tz_sensor5 tsens_tz_sensor6 tsens_tz_sensor7 tsens_tz_sensor8 tsens_tz_sensor9
 weights
 sampling 50
 math 2
@@ -33,109 +44,31 @@ set_point 95000
 set_point_clr 65000
 time_constant 0
 
-[SS-CASE-THERM]
+[SS-POPMEM]
 #algo_type ss
-sampling 10000
-sensor case_therm
-device cluster0
-set_point 43000
-set_point_clr 40000
-time_constant 0
-device_max_limit 1689600
+sampling 250
+sensor pop_mem
+device cpu_voltage
+set_point 70000
+set_point_clr 55000
+time_constant 2
 
-[SS-CPUS-ALL]
+[SS-CPUS]
 #algo_type ss
 sampling 50
 sensor VIRTUAL-CPUS
-device cluster0
-set_point 95000
+device cpu_voltage
+set_point 85000
 set_point_clr 55000
 time_constant 0
 
 [SPEAKER-CAL]
 sampling 30000 30000 10 1800000
-sensor pm8953_tz
-sensors tsens_tz_sensor1 tsens_tz_sensor2 tsens_tz_sensor3 tsens_tz_sensor14 tsens_tz_sensor15
+sensor pm8937_tz
+sensors tsens_tz_sensor1 tsens_tz_sensor2 tsens_tz_sensor3 tsens_tz_sensor10
 temp_range 6000 10000 2000
 max_temp 45000
 offset -4000
-
-[MODEM_PA_MITIGATION]
-#algo_type monitor
-sampling 10000
-sensor case_therm
-thresholds 70000 70000
-thresholds_clr 69000 69000
-actions modem modem
-action_info 2 3
-
-[MODEM_PROC_TEMP_MITIGATION]
-#algo_type monitor
-sampling 10000
-sensor case_therm
-thresholds 70000 70000
-thresholds_clr 69000 69000
-actions modem_proc modem_proc
-action_info 1 3
-
-[BATTERY_CHARGING_CTL]
-#algo_type monitor
-sampling 10000
-sensor case_therm
-thresholds 38000 40000 43000 48000
-thresholds_clr 35000 38000 40000 43000
-actions battery battery battery battery
-action_info 2 3 4 5
-
-[VDD_RSTR_MONITOR-TSENS15]
-#algo_type monitor
-sampling 1000
-sensor tsens_tz_sensor15
-thresholds 5000
-thresholds_clr 10000
-actions vdd_restriction
-action_info 1
-descending
-
-[VDD_RSTR_MONITOR-TSENS14]
-#algo_type monitor
-sampling 1000
-sensor tsens_tz_sensor14
-thresholds 5000
-thresholds_clr 10000
-actions vdd_restriction
-action_info 1
-descending
-
-[VDD_RSTR_MONITOR-TSENS13]
-#algo_type monitor
-sampling 1000
-sensor tsens_tz_sensor13
-thresholds 5000
-thresholds_clr 10000
-actions vdd_restriction
-action_info 1
-descending
-
-[VDD_RSTR_MONITOR-TSENS12]
-#algo_type monitor
-sampling 1000
-sensor tsens_tz_sensor12
-thresholds 5000
-thresholds_clr 10000
-actions vdd_restriction
-action_info 1
-descending
-
-[VDD_RSTR_MONITOR-TSENS11]
-#algo_type monitor
-sampling 1000
-sensor tsens_tz_sensor11
-thresholds 5000
-thresholds_clr 10000
-actions vdd_restriction
-action_info 1
-descending
 
 [VDD_RSTR_MONITOR-TSENS10]
 #algo_type monitor
