--- a/rootdir/etc/init.qcom.power.rc
+++ b/rootdir/etc/init.qcom.power.rc
@@ -18,13 +18,12 @@ on boot
     # Set RPS mask
     write /sys/class/net/rmnet0/queues/rx-0/rps_cpus 2
 
-    # Update foreground and background cpusets
-    # Reserve CPU 7 for the top app
-    write /dev/cpuset/foreground/cpus 0-6
-    write /dev/cpuset/background/cpus 4-6
-    write /dev/cpuset/system-background/cpus 4-6
-    write /dev/cpuset/top-app/cpus 0-7
-    write /dev/cpuset/camera-daemon/cpus 4-7
+    write /dev/cpuset/audio-app/cpus "4-7"
+    write /dev/cpuset/background/cpus "4-7"
+    write /dev/cpuset/foreground/cpus "0-7"
+    write /dev/cpuset/restricted/cpus "4-7"
+    write /dev/cpuset/system-background/cpus "4-7"
+    write /dev/cpuset/top-app/cpus "0-7"
 
     # Bring all cores online
     write /sys/devices/system/cpu/cpu1/online 1
