--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -38,7 +38,7 @@ on fs
 
     mount_all /vendor/etc/fstab.qcom
     write /proc/sys/vm/page-cluster 0
-    write /proc/sys/vm/swappiness 100
+    write /sys/block/zram0/comp_algorithm lzo
 
     # Set permissions for persist partition
     chown root system /mnt/vendor/persist
