--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -383,6 +383,15 @@ service vendor.qcom-post-boot /vendor/bin/init.qcom.post_boot.sh
     disabled
     oneshot
 
+# Override the AOSP sensor HAL service definition to add input group access
+service vendor.sensors-hal-1-0 /vendor/bin/hw/android.hardware.sensors@1.0-service
+    override
+    class hal
+    user system
+    group system wakelock uhid input context_hub
+    capabilities BLOCK_SUSPEND
+    rlimit rtprio 10 10
+
 on property:sys.boot_completed=1
     start vendor.qcom-post-boot
     restart ril-daemon
