land: rootdir: Cleanup & Update USB configuration
- We need this for 4.9

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -387,3 +387,8 @@ service vendor.power_off_alarm /vendor/bin/power_off_alarm
     group system
     disabled
     oneshot
+
+on charger
+    setprop persist.sys.usb.config mass_storage
+    load_system_props
+    start vendor.qcom-post-boot
