--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -228,6 +228,10 @@ on post-fs-data
 
     setprop vold.post_fs_data_done 1
 
+    # Create FM dir for patchdownloader
+    mkdir /data/vendor/fm 0770 system system
+    chmod 0770 /data/vendor/fm
+
     # Create PERFD deamon related dirs
     mkdir /data/vendor/perfd 0770 root system
     rm /data/vendor/perfd/default_values
