--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -36,9 +36,8 @@ on fs
     # GnssConfiguration doesn't actually look at gps.conf, just the debug file
     mount none /system/etc/gps.conf /system/etc/gps_debug.conf bind
 
+    # Mount fstab
     mount_all /vendor/etc/fstab.qcom
-    write /proc/sys/vm/page-cluster 0
-    write /sys/block/zram0/comp_algorithm lzo
 
     # Set permissions for persist partition
     chown root system /mnt/vendor/persist
@@ -51,6 +50,17 @@ on fs
     restorecon_recursive /mnt/vendor/persist
  
 on init
+    # configure zram and zswap
+    write /proc/sys/vm/page-cluster 0
+    write /proc/sys/vm/swappiness 100
+    write /proc/sys/vm/vfs_cache_pressure 100
+    write /sys/block/zram0/comp_algorithm lz4 
+    write /sys/module/zswap/parameters/compressor lz4
+    write /sys/module/zswap/parameters/zpool zsmalloc
+    write /sys/module/zswap/parameters/max_pool_percent 35
+    write /sys/module/zswap/parameters/enabled 1
+
+    # configure schedtune
     write /dev/stune/foreground/schedtune.sched_boost_no_override 1
     write /dev/stune/top-app/schedtune.sched_boost_no_override 1
     write /dev/stune/schedtune.colocate 0
